--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,13 @@
   "projects": {
     "front-components": {
       "projectType": "library",
+      "schematics": {
+        "@schematics/angular:component": {
+          "standalone": true,
+          "style": "scss",
+          "changeDetection": "OnPush"
+        }
+      },
       "root": "projects/front-components",
       "sourceRoot": "projects/front-components/src",
       "prefix": "snab",
@@ -33,6 +40,36 @@
               "zone.js/testing"
             ]
           }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": "projects/front-components/.storybook",
+            "browserTarget": "front-components:build",
+            "compodoc": true,
+            "compodocArgs": [
+              "-e",
+              "json",
+              "-d",
+              "projects/front-components"
+            ],
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": "projects/front-components/.storybook",
+            "browserTarget": "front-components:build",
+            "compodoc": true,
+            "compodocArgs": [
+              "-e",
+              "json",
+              "-d",
+              "projects/front-components"
+            ],
+            "outputDir": "dist/storybook/front-components"
+          }
         }
       }
     },
@@ -40,7 +77,9 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "standalone": true,
+          "style": "scss",
+          "changeDetection": "OnPush"
         }
       },
       "root": "projects/test-app",
