--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "test": "ng test",
     "lib:build": "ng build front-components",
     "lib:watch": "ng build front-components --watch",
     "tokens:update": "style-dictionary build",
-    "test": "ng test"
+    "storybook": "ng run front-components:storybook"
   },
   "private": true,
   "dependencies": {
@@ -33,8 +34,18 @@
     "@angular/build": "^19.1.0",
     "@angular/cli": "^19.1.0",
     "@angular/compiler-cli": "^19.1.0",
+    "@chromatic-com/storybook": "^3.2.3",
+    "@compodoc/compodoc": "^1.1.26",
+    "@storybook/addon-docs": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-onboarding": "^8.5.0",
+    "@storybook/angular": "^8.5.0",
+    "@storybook/blocks": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@types/jasmine": "~5.1.0",
     "eslint": "^9.18.0",
+    "eslint-plugin-storybook": "^0.11.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -45,5 +56,10 @@
     "storybook": "^8.5.0",
     "style-dictionary": "^4.3.0",
     "typescript": "~5.7.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
