--- a/angular.json
+++ b/angular.json
@@ -104,7 +104,8 @@
               }
             ],
             "styles": [
-              "projects/test-app/src/styles.scss"
+              "projects/test-app/src/styles.scss",
+              "projects/front-components/src/lib/styles/custom-variables.scss"
             ],
             "scripts": []
           },
