--- a/projects/front-components/package.json
+++ b/projects/front-components/package.json
@@ -8,5 +8,7 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "author": "ssnab",
+  "license": "ISC"
 }
