--- a/projects/front-components/package.json
+++ b/projects/front-components/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "front-components",
-  "version": "0.0.1",
+  "name": "front-library",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^19.1.0",
     "@angular/core": "^19.1.0"
