--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ deploy-library:
     - echo "CI_SERVER_HOST ${CI_SERVER_HOST}"
     - echo "CI_PROJECT_ID ${CI_PROJECT_ID}"
     - echo "token ${CI_JOB_TOKEN}"
-    - echo "@front-library:registry=https://${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/" > .npmrc
+    - echo "@front-components:registry=https://${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/" > .npmrc
     - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}" >> .npmrc
     - npm run lib:publish
   artifacts:
