--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ deploy-library:
     - npm run lib:build
     - echo "Содержимое текущей директории"
     - ls
-    - echo "Содержимое директории dist/components:"
-    - ls dist/components
+    - echo "Содержимое директории dist:"
+    - ls dist
     - echo "CI_SERVER_HOST ${CI_SERVER_HOST}"
     - echo "CI_PROJECT_ID ${CI_PROJECT_ID}"
     - echo "token ${CI_JOB_TOKEN}"
