--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ deploy-library:
     - ls
     - echo "Содержимое директории dist:"
     - ls dist
+    - tree
     - echo "CI_SERVER_HOST ${CI_SERVER_HOST}"
     - echo "CI_PROJECT_ID ${CI_PROJECT_ID}"
     - echo "token ${CI_JOB_TOKEN}"
