--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ deploy-library:
     - echo "token ${CI_JOB_TOKEN}"
     - echo "@front-components:registry=https://${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/" > .npmrc
     - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}" >> .npmrc
-    - ls 
-    - ls dist
+    - ls -la
+    - ls -la dist
     - npm run lib:publish
   artifacts:
     paths:
