--- a/projects/front-components/package.json
+++ b/projects/front-components/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "front-components",
+  "name": "front-library",
   "version": "0.0.1",
+  "main": "fesm2022/front-components.mjs",
+  "module": "fesm2022/front-components.mjs",
+  "typings": "index.d.ts",
+  "publishConfig": {
+    "registry": "https://git.ssnab.it/api/v4/projects/41/packages/npm/"
+  },
   "peerDependencies": {
     "@angular/common": "^19.1.0",
     "@angular/core": "^19.1.0"
