--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lib:build": "ng build front-components",
     "lib:watch": "ng build front-components --watch",
     "lib:publish": "npm run lib:build && cp .npmrc ./dist/front-components/ && cd dist/front-components && npm pack && npm publish",
-    "test": "ng test"
+    "test": "ng test",
     "tokens:update": "style-dictionary build",
     "storybook": "ng run front-components:storybook"
   },
@@ -46,8 +46,6 @@
     "@storybook/angular": "^8.5.0",
     "@storybook/blocks": "^8.5.0",
     "@storybook/test": "^8.5.0",
-    "@types/jasmine": "~5.1.0",
-    "eslint": "^9.18.0",
     "eslint-plugin-storybook": "^0.11.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -59,7 +57,6 @@
     "storybook": "^8.5.0",
     "style-dictionary": "^4.3.0",
     "typescript": "~5.7.2"
-  }
   },
   "engines": {
     "node": "^18.19.1 || ^20.11.1 || >=22.0.0",
