--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               "tsConfig": "projects/front-components/tsconfig.lib.json"
             }
           },
-          "defaultConfiguration": "production",
+          "defaultConfiguration": "production"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
