--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   },
   "engines": {
     "node": "^18.19.1 || ^20.11.1 || >=22.0.0",
-    "npm": "^6.11.0 || ^7.5.6 || >=8.0.0",
-    "yarn": "Please use npm instead of yarn to install dependencies"
+    "npm": "^6.11.0 || ^7.5.6 || >=8.0.0"
   },
   "eslintConfig": {
     "extends": [
