--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
@@ -35,8 +36,6 @@
     "@angular/build": "^19.1.0",
     "@angular/cli": "^19.1.0",
     "@angular/compiler-cli": "^19.1.0",
-    "@types/jasmine": "~5.1.0",
-    "eslint": "^9.18.0",
     "@chromatic-com/storybook": "^3.2.3",
     "@compodoc/compodoc": "^1.1.26",
     "@storybook/addon-docs": "^8.5.0",
@@ -46,6 +45,8 @@
     "@storybook/angular": "^8.5.0",
     "@storybook/blocks": "^8.5.0",
     "@storybook/test": "^8.5.0",
+    "@types/jasmine": "~5.1.0",
+    "eslint": "^9.18.0",
     "eslint-plugin-storybook": "^0.11.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
