--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@compodoc/compodoc": "^1.1.26",
     "@maskito/angular": "^3.2.1",
     "@maskito/core": "^3.2.1",
+    "@maskito/kit": "^3.2.1",
     "@storybook/addon-docs": "^8.5.0",
     "@storybook/addon-essentials": "^8.5.0",
     "@storybook/addon-interactions": "^8.5.0",
