--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lib:publish": "npm run lib:build && cp .npmrc ./dist/front-components/ && cd dist/front-components && npm pack && npm publish",
     "test": "ng test",
     "tokens:update": "style-dictionary build",
-    "storybook": "ng run front-components:storybook"
+    "storybook": "ng run front-components:storybook",
+    "lint": "ng lint",
+    "format": "prettier --write \"**/*.{ts,html,css,scss,json,md}\""
   },
   "private": true,
   "dependencies": {
@@ -33,9 +35,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.0",
-    "@angular-eslint/eslint-plugin": "^19.0.2",
-    "@angular-eslint/eslint-plugin-template": "^19.0.2",
-    "@angular-eslint/template-parser": "^19.0.2",
+    "@angular-eslint/builder": "^19.2.0",
+    "@angular-eslint/eslint-plugin": "^19.2.0",
+    "@angular-eslint/eslint-plugin-template": "^19.2.0",
+    "@angular-eslint/schematics": "^19.2.0",
+    "@angular-eslint/template-parser": "^19.2.0",
     "@angular/build": "^19.1.0",
     "@angular/cli": "^19.1.0",
     "@angular/compiler-cli": "^19.1.0",
@@ -48,8 +52,13 @@
     "@storybook/angular": "^8.5.0",
     "@storybook/blocks": "^8.5.0",
     "@storybook/test": "^8.5.0",
+    "@tinkoff/eslint-config": "^4.1.3",
+    "@tinkoff/eslint-config-angular": "^5.0.0",
+    "@tinkoff/prettier-config": "^5.0.0",
     "@types/jasmine": "~5.1.0",
-    "eslint": "^9.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-storybook": "^0.11.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -58,6 +67,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^19.1.0",
+    "prettier": "^3.5.3",
     "storybook": "^8.5.0",
     "style-dictionary": "^4.3.0",
     "typescript": "~5.7.2"
