--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/eslint-plugin": "^19.2.0",
+    "@angular-eslint/template-parser": "^19.2.0",
     "@angular/animations": "^19.1.0",
     "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.0",
@@ -29,22 +31,18 @@
     "@maskito/angular": "^3.2.1",
     "@maskito/core": "^3.2.1",
     "@maskito/kit": "^3.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.0",
-    "@angular-eslint/builder": "^19.2.0",
-    "@angular-eslint/eslint-plugin": "^19.2.0",
-    "@angular-eslint/eslint-plugin-template": "^19.2.0",
-    "@angular-eslint/schematics": "^19.2.0",
-    "@angular-eslint/template-parser": "^19.2.0",
     "@angular/build": "^19.1.0",
     "@angular/cli": "^19.1.0",
     "@angular/compiler-cli": "^19.1.0",
     "@chromatic-com/storybook": "^3.2.3",
-    "@compodoc/compodoc": "^1.1.26",
     "@storybook/addon-docs": "^8.5.0",
     "@storybook/addon-essentials": "^8.5.0",
     "@storybook/addon-interactions": "^8.5.0",
@@ -52,14 +50,11 @@
     "@storybook/angular": "^8.5.0",
     "@storybook/blocks": "^8.5.0",
     "@storybook/test": "^8.5.0",
-    "@tinkoff/eslint-config": "^4.1.3",
-    "@tinkoff/eslint-config-angular": "^5.0.0",
-    "@tinkoff/prettier-config": "^5.0.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "^19.2.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-storybook": "^0.11.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -68,18 +63,14 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^19.1.0",
     "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
     "storybook": "^8.5.0",
     "style-dictionary": "^4.3.0",
-    "typescript": "~5.7.2"
+    "typescript-eslint": "^8.26.0"
   },
   "engines": {
     "node": "^18.19.1 || ^20.11.1 || >=22.0.0",
     "npm": "^6.11.0 || ^7.5.6 || >=8.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   },
   "author": "ssnab",
   "license": "ISC"
