--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@storybook/angular": "^8.5.0",
     "@storybook/blocks": "^8.5.0",
     "@storybook/test": "^8.5.0",
+    "@tinkoff/eslint-config": "^4.1.3",
+    "@tinkoff/eslint-config-angular": "^5.0.0",
+    "@tinkoff/prettier-config": "^5.0.0",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "^19.2.0",
     "eslint": "^8.57.1",
