feature/3112 light-box and upgrade modal

--- a/angular.json
+++ b/angular.json
@@ -109,7 +109,8 @@
               "projects/front-components/src/lib/shared/styles/_variables/_alias.scss",
               "projects/front-components/src/lib/shared/styles/custom-variables.scss",
               "projects/front-components/src/lib/shared/styles/table.scss",
-              "projects/front-components/src/lib/shared/styles/mixins/text.scss"
+              "projects/front-components/src/lib/shared/styles/mixins/text.scss",
+              "projects/front-components/src/lib/shared/styles/overlay.scss"
             ],
             "scripts": []
           },
