--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"storybook": "ng run front-components:storybook",
 		"lint": "ng lint",
 		"lint:fix": "ng lint --fix",
-		"format": "prettier --write \"**/*.{ts,html,css,scss,json,md}\""
+		"format": "prettier --write \"**/*.{ts,html,css,scss,json,md}\"",
+		"prepare": "husky install"
 	},
 	"private": true,
 	"dependencies": {
@@ -60,12 +61,14 @@
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-import-resolver-typescript": "^3.8.3",
 		"eslint-plugin-prettier": "^5.2.3",
+		"husky": "^9.1.7",
 		"jasmine-core": "~5.5.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
+		"lint-staged": "^15.4.3",
 		"ng-packagr": "^19.1.0",
 		"prettier": "^3.5.3",
 		"prettier-eslint": "^16.3.0",
@@ -78,5 +81,17 @@
 		"npm": "^6.11.0 || ^7.5.6 || >=8.0.0"
 	},
 	"author": "ssnab",
-	"license": "ISC"
+	"license": "ISC",
+	"lint-staged": {
+		"*.ts": [
+			"prettier --write",
+			"eslint --max-warnings 0 ."
+		],
+		"*.{html,scss}": [
+			"prettier --write"
+		],
+		"*.{json,md}": [
+			"prettier --write"
+		]
+	}
 }
