--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"test": "ng test",
 		"tokens:update": "style-dictionary build",
 		"storybook": "ng run front-components:storybook",
+		"build-storybook": "ng run front-components:build-storybook --debug-webpack",
 		"lint": "ng lint",
 		"lint:fix": "ng lint --fix",
 		"format": "prettier --write \"**/*.{ts,html,css,scss,json,md}\"",
@@ -37,13 +38,23 @@
 		"@typescript-eslint/parser": "^8.26.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.15.0"
+		"zone.js": "^0.15.0"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^19.1.0",
 		"@angular/build": "^19.1.0",
 		"@angular/cli": "^19.1.0",
 		"@angular/compiler-cli": "^19.1.0",
+		"@chromatic-com/storybook": "^3.2.5",
+		"@compodoc/compodoc": "^1.1.26",
+		"@storybook/addon-docs": "^8.6.4",
+		"@storybook/addon-essentials": "^8.6.4",
+		"@storybook/addon-interactions": "^8.6.4",
+		"@storybook/addon-onboarding": "^8.6.4",
+		"@storybook/addon-styling-webpack": "^1.0.1",
+		"@storybook/angular": "^8.6.4",
+		"@storybook/blocks": "^8.6.4",
+		"@storybook/test": "^8.6.4",
 		"@tinkoff/eslint-config": "^4.1.3",
 		"@tinkoff/eslint-config-angular": "^5.0.0",
 		"@tinkoff/prettier-config": "^5.0.0",
@@ -53,6 +64,8 @@
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-import-resolver-typescript": "^3.8.3",
 		"eslint-plugin-prettier": "^5.2.3",
+		"eslint-plugin-storybook": "^0.11.4",
+		"file-loader": "^6.2.0",
 		"husky": "^9.1.7",
 		"jasmine-core": "~5.5.0",
 		"karma": "~6.4.0",
@@ -64,6 +77,9 @@
 		"ng-packagr": "^19.1.0",
 		"prettier": "^3.5.3",
 		"prettier-eslint": "^16.3.0",
+		"sass": "^1.85.1",
+		"sass-loader": "^16.0.5",
+		"storybook": "^8.6.4",
 		"style-dictionary": "^4.3.0",
 		"typescript-eslint": "^8.26.0"
 	},
