--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test": "ng test",
 		"tokens:update": "style-dictionary build",
 		"storybook": "ng run front-components:storybook",
-		"build-storybook": "ng run front-components:build-storybook --debug-webpack",
+		"build-storybook": "ng run front-components:build-storybook",
 		"lint": "ng lint",
 		"lint:fix": "ng lint --fix",
 		"format": "prettier --write \"**/*.{ts,html,css,scss,json,md}\"",
