--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@angular/compiler-cli": "^19.1.0",
 		"@chromatic-com/storybook": "^3.2.5",
 		"@compodoc/compodoc": "^1.1.26",
+		"@storybook/addon-a11y": "^8.6.4",
 		"@storybook/addon-backgrounds": "^8.6.4",
 		"@storybook/addon-designs": "^8.2.1",
 		"@storybook/addon-docs": "^8.6.4",
