--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ deploy-library:
     only:
         - main
 
-deploy-storybook:
+pages:
     stage: deploy
     tags:
         - docker
@@ -42,7 +42,6 @@ deploy-storybook:
         - mkdir -p public
         - echo "Публикуем storybook"
         - cp -r ${STORYBOOK_DIR}/* public/
-    pages: true
     artifacts:
         paths:
             - public
