improve storybook, add documentation pages

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"@tinkoff/prettier-config": "^5.0.0",
 		"@types/jasmine": "~5.1.0",
 		"angular-eslint": "^19.2.0",
+		"babel-loader": "^10.0.0",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-import-resolver-typescript": "^3.8.3",
@@ -81,6 +82,7 @@
 		"ng-packagr": "^19.1.0",
 		"prettier": "^3.5.3",
 		"prettier-eslint": "^16.3.0",
+		"react": "^19.0.0",
 		"sass": "^1.85.1",
 		"sass-loader": "^16.0.5",
 		"storybook": "^8.6.4",
