--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@storybook/addon-essentials": "^8.6.4",
 		"@storybook/addon-interactions": "^8.6.4",
 		"@storybook/addon-onboarding": "^8.6.4",
+		"@storybook/addon-storysource": "^8.6.11",
 		"@storybook/addon-styling-webpack": "^1.0.1",
 		"@storybook/angular": "^8.6.4",
 		"@storybook/blocks": "^8.6.4",
