--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular-eslint/eslint-plugin": "^19.2.0",
-		"@angular-eslint/template-parser": "^19.2.0",
+		"@angular-eslint/eslint-plugin": "19.2.1",
+		"@angular-eslint/template-parser": "19.2.1",
 		"@angular/animations": "^19.1.0",
 		"@angular/cdk": "^19.1.3",
 		"@angular/common": "^19.1.0",
@@ -63,7 +63,7 @@
 		"@tinkoff/eslint-config-angular": "^5.0.0",
 		"@tinkoff/prettier-config": "^5.0.0",
 		"@types/jasmine": "~5.1.0",
-		"angular-eslint": "^19.2.0",
+		"angular-eslint": "19.2.1",
 		"babel-loader": "^10.0.0",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.0.2",
